{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 326,
  "lineage": "9a5bffad-36cc-b9ca-a780-4e938a3f9ceb",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dylan_demo_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dylan_demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:security-group/sg-0ca93c0cf1c96aa6a",
            "description": "allow access on port 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca93c0cf1c96aa6a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dylan_demo_sg",
            "name_prefix": "",
            "owner_id": "992567842996",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dylan_demo_sg"
            },
            "tags_all": {
              "Name": "dylan_demo_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dylan_demo_ig",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:internet-gateway/igw-001375c15af2ea2cd",
            "id": "igw-001375c15af2ea2cd",
            "owner_id": "992567842996",
            "tags": {
              "Name": "Dylan_Demo_Internet_Gateway"
            },
            "tags_all": {
              "Name": "Dylan_Demo_Internet_Gateway"
            },
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dylan_demo_rt",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:route-table/rtb-07a43f1e42d736dba",
            "id": "rtb-07a43f1e42d736dba",
            "owner_id": "992567842996",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001375c15af2ea2cd",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001375c15af2ea2cd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dylan_Demo_Public_Route_Table"
            },
            "tags_all": {
              "Name": "Dylan_Demo_Public_Route_Table"
            },
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.dylan_demo_ig",
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dylan_demo_rt_a",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028eaadedbdd9f6d3",
            "route_table_id": "rtb-07a43f1e42d736dba",
            "subnet_id": "subnet-0823b9d1f7134e558"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.dylan_demo_ig",
            "module.vpc.aws_route_table.dylan_demo_rt",
            "module.vpc.aws_subnet.dylan_demo_public_subnet_1",
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dylan_demo_private_subnet_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:subnet/subnet-062fd1fd92979ad84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-062fd1fd92979ad84",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992567842996",
            "tags": {
              "Name": "Dylan_Private_Demo_Subnet_1"
            },
            "tags_all": {
              "Name": "Dylan_Private_Demo_Subnet_1"
            },
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dylan_demo_private_subnet_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:subnet/subnet-0d67dbd7d8ed7d51f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0d67dbd7d8ed7d51f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992567842996",
            "tags": {
              "Name": "Dylan_Private_Demo_Subnet_2"
            },
            "tags_all": {
              "Name": "Dylan_Private_Demo_Subnet_2"
            },
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dylan_demo_public_subnet_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:subnet/subnet-0823b9d1f7134e558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0823b9d1f7134e558",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992567842996",
            "tags": {
              "Name": "Dylan_Public_Demo_Subnet_1"
            },
            "tags_all": {
              "Name": "Dylan_Public_Demo_Subnet_1"
            },
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dylan_demo_public_subnet_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:subnet/subnet-0a3e2b42eef4c7707",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a3e2b42eef4c7707",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992567842996",
            "tags": {
              "Name": "Dylan_Public_Demo_Subnet_2"
            },
            "tags_all": {
              "Name": "Dylan_Public_Demo_Subnet_2"
            },
            "vpc_id": "vpc-03c7d99b2951223df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.dylan_demo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dylan_demo_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992567842996:vpc/vpc-03c7d99b2951223df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bbd3b59f319e8a4a",
            "default_route_table_id": "rtb-08ec3793c7962c2f6",
            "default_security_group_id": "sg-038db06ecbb92cc7a",
            "dhcp_options_id": "dopt-1bf9f861",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c7d99b2951223df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08ec3793c7962c2f6",
            "owner_id": "992567842996",
            "tags": {
              "Name": "Dylan_demo_VPC"
            },
            "tags_all": {
              "Name": "Dylan_demo_VPC"
            }
          }
        }
      ]
    }
  ]
}